Version 2.0.2 - The "Kry: Name This" version.
----------
2005-05-31

	GonoszTopi:
		* Fixed #421: 'In Windows XP it lets to choose Konqueror,
		  Galeon and other Unix based browsers.'
		* Fixed #406 and #380: 'some clients get an unexpected very
		  high priority'

	ken:
		* Fixed a hang-on-exit-using-100%-cpu bug
		* Fixed a crash when enabling UDP after startup

Version 2.0.1 - The " Woops, HotFix " version.
----------
2005-05-18

	ken:
		* Fixed Tray Icon compilation on Mac.

	Kry:
		* HOTFIX: Fixed 100% CPU usage because of network errors on some servers.
		* Fixed crash after removing a server.
		* Fixed sorting on the UploadList by Transferred (thanks eylzo).
		* Users/Files on server no longer show as negative if server sends wrong values.
		* Check for autopoint on configure to warn for gettext not installed.
		
	niet:
		* Updated xal.pl (some fixes).

	Phoenix:
		* Added DNS resolving functionality to amulecmd's connect command. 
		  This is usefull for dynamic IP servers. 
		  Now you can use the server's name instead of the server's IP address.
		* Fixed a bug in http proxy authentication code.

	Special Thanks To:
		
		* Contributors:
		  eylzo

		* Bug and feature reporters:
		  albatros_la
		  Lucky_JL
		  Mr Faber
		  
		* All the usual people (translators, debugers, people at #amule, etc)
		  C'mon, this is a hotfix release, I can't add everyone again.
		
Version 2.0.0 FINAL - The "Let's dedicate this to Tiku" version.
----------
2005-05-01

	BigBob:
		* Compilation fix for WebServer.cpp and BaseClient.cpp with wx-2.4.2.
		* Compilation fix for OtherFunctions.cpp with Slackware 9.1.0

	CosmicDJ:
		* NetBSD compilation fixes.

	deltaHF:
		* Preferences for auto-sort download queue.
		* TCP and UDP port start now at 0 (remember - running amule as root is insecure!!)
		* Added aMule version info into "About" popup.
		* Show current DL speed from a client you are uploading to in "Remote
		  Status" column instead of in the "Speed" column. 

	geeko: